--- a/wineshare/src/main/resources/templates/board/boardForm.html
+++ b/wineshare/src/main/resources/templates/board/boardForm.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/board-form.css}">
 
     <style>
-        .fieldError{
+        .fieldError {
             color: #bd2130;
         }
     </style>
@@ -15,12 +15,39 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
-        // const boardStatus = $('#hidden-boardStatus').val();
+
+        //에러메세지 뿌리기
+        $(document).ready(function(){
+            const errorMessage = [[${errorMessage}]]
+            if(errorMessage != null){
+                alert(errorMessage);
+            }
+
+            bindDomEvent();
+        });
+
+        // 파일 업로드 & 수정시 (이미지 파일이 맞는지)파일 처리해주는애
+        function bindDomEvent() {
+            $(".custom-file-input").on("change", function () {
+                const fileName = $(this).val().split("\\").pop();   // 이미지의 파일명 추출
+                // substring +1을 한 이유는 .부터 가져오는게아니라 .뒤에 부터 가져오려고
+                let fileExt = fileName.substring(fileName.lastIndexOf(".") + 1);   // 확장자 추출
+                fileExt = fileExt.toLowerCase();  // 소문자로 변환(if문에서 힘드니까 소문자 처리)
+
+                // 이미지 관련 파일관련이 아닌건 거르기
+                if (fileExt != "jpg" && fileExt != "jpeg" && fileExt != "gif" && fileExt != "png" && fileExt != "bmp") {
+                    alert("이미지 파일만 등록이 가능합니다.");
+                    return;
+                }
+                //siblings : 형제들
+                //this = 이벤트 대상(input) siblings(그중의 커스텀 파일 라벨)
+                $(this).siblings(".custom-file-label").html(fileName);  // 파일네임 찍히게
+
+            });
+        }
 
     </script>
 </th:block>
-
-
 
 
 <div layout:fragment="content">
@@ -42,106 +69,79 @@
                                 <div class="col-lg-12">
 
                                     <div class="form-group">
-<!--                                        <div th:if="${#strings.isEmpty(boardDTO.id)}">-->
-<!--                                            <label th:for="boardStatus"></label>-->
-<!--                                            <input type="text" class="form-control" id="boardStatus" name="boardStatus" th:value="${boardStatus}" readonly>-->
-<!--                                        </div>-->
-
-<!--                                        <div th:unless="${#strings.isEmpty(boardDTO.id)}">-->
-<!--                                        <label th:for="boardStatus"></label>-->
-<!--                                        <input type="text" class="form-control" th:field="*{boardStatus}" readonly>-->
-<!--                                        </div>-->
-
-                                        <div th:if="${boardDTO.id == null}">
-                                            <label th:for="boardStatus"></label>
-                                            <input type="text" class="form-control" id="boardStatus" name="boardStatus" th:value="${boardStatus}" readonly>
-                                        </div>
-
-                                        <div th:unless="${boardDTO.id == null}">
-                                            <label th:for="boardStatus"></label>
-                                            <input type="text" class="form-control" th:field="*{boardStatus}" readonly>
-                                        </div>
+                                        <label th:for="boardStatus"></label>
+                                        <input type="text" class="form-control" th:field="*{boardStatus}" readonly>
 
                                     </div>
 
                                     <div class="form-group">
 
                                         <label th:for="boardTitle">제목</label>
-                                        <input type="text" class="form-control" th:field="*{boardTitle}" placeholder="제목을 입력해주세요.">
-<!--                                        <p th:if="${#fields.hasErrors('boardTitle')}" th:errors="*{boardTitle}" class="fieldError" th:readonly="${!isAuthor}">Incorrect data</p>-->
+                                        <input type="text" class="form-control" th:field="*{boardTitle}"
+                                               placeholder="제목을 입력해주세요.">
+                                        <p th:if="${#fields.hasErrors('boardTitle')}" th:errors="*{boardTitle}"
+                                           class="fieldError" th:readonly="${!isAuthor}">Incorrect data</p>
 
                                     </div>
 
                                     <div th:if="${#strings.toLowerCase(boardStatus) == 'upgrade' || #strings.toLowerCase(boardStatus) == 'request'}">
-                                    <div class="form-group">
-                                        <div class="custom-file">
-                                        <label th:for="boardImgFile" class="custom-file-label">사진 첨부</label>
-                                        <input type="file" class="custom-file-input" th:field="*{boardImgFile}">
+                                        <div class="form-group">
+                                            <div class="custom-file">
+                                                <label th:for="boardImgFile" class="custom-file-label" th:text="*{boardOriImgName}">사진 첨부</label>
+                                                <input type="file" class="custom-file-input" id="boardImgFile" name="boardImgFile" value="boardImgFile">
+                                            </div>
                                         </div>
                                     </div>
-                                    </div>
 
-                                    <div th:unless="${#strings.toLowerCase(boardStatus) == 'upgrade' || #strings.toLowerCase(boardStatus) == 'request'}">
-<!--                                    일단 사진없으면?    -->
-                                    </div>
 
                                     <div class="form-group">
                                         <label th:for="boardContent">내용</label>
-                                        <textarea  th:field="*{boardContent}" cols="95%" rows="5" class="form-control" ></textarea>
-<!--                                        <p th:if="${#fields.hasErrors('boardContent')}" th:errors="*{boardContent}" class="fieldError">Incorrect data</p>-->
+                                        <textarea th:field="*{boardContent}" cols="95%" rows="5"
+                                                  class="form-control"></textarea>
+                                        <p th:if="${#fields.hasErrors('boardContent')}" th:errors="*{boardContent}"
+                                           class="fieldError">Incorrect data</p>
                                     </div>
 
-<!--                                    <div th:if="${#strings.isEmpty(boardDTO.id)}">-->
-                                    <div th:if="${boardDTO.id==null}">
-<!--                                        <div class="form-group">-->
-<!--                                            <label th:for="writerNickname">작성자</label>-->
-<!--                                            <input type="text" class="form-control" th:field="*{writerNickname}" placeholder="작성자를 입력해주세요.">-->
-<!--                                            <p class="fieldError" th:if="${#fields.hasErrors('writerNickname')}" th:errors="*{writerNickname}">Incorrect data</p>-->
-<!--                                        </div>-->
-
-                                        <div class="reg-button">
-                                            <!--    th:formaction 경로 수정해야합니덥!!!     -->
-                                            <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/new'}"
-                                                    type="submit" class="btn text-white" style="background-color: #c02323;">등록</button>
-                                            <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>
-                                        </div>
-
-                                    </div>
-
-                                    <div th:unless="${boardDTO.id ==null}">
+                                    <div th:if="${not #strings.isEmpty(boardDTO.id)}">
                                         <div class="form-group">
                                             <label th:for="writerNickname">작성자</label>
-                                            <input type="text" class="form-control" th:field="*{writerNickname}" placeholder="작성자를 입력해주세요." readonly>
-<!--                                            <p class="fieldError" th:if="${#fields.hasErrors('writerNickname')}" th:errors="*{writerNickname}">Incorrect data</p>-->
+                                            <input type="text" class="form-control" th:field="*{writerNickname}"
+                                                   placeholder="작성자를 입력해주세요." readonly>
+                                            <p class="fieldError" th:if="${#fields.hasErrors('writerNickname')}"
+                                               th:errors="*{writerNickname}">Incorrect data</p>
                                         </div>
+                                    </div>
 
-<!--                                        <div th:if="${isAuthor}">-->
-                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/modify/' + ${boardDTO.id}}" class="btn text-white" style="background-color: #c02323;" type="submit">수정</button>
-                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/remove/' + ${boardDTO.id}}" class="btn text-white" style="background-color: #E1B848;" type="submit">삭제</button>
-                                        <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>
-<!--                                        </div>-->
+                                    <div th:if="${#strings.isEmpty(boardDTO.id)}">
 
-                                        <div th:unless="${isAuthor}">
-
+                                        <div class="reg-button">
+                                            <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/new'}"
+                                                    type="submit" class="btn text-white"
+                                                    style="background-color: #c02323;">등록
+                                            </button>
+                                            <button type="reset" class="btn text-white"
+                                                    style="background-color: #BDBDBD;">취소
+                                            </button>
                                         </div>
 
                                     </div>
 
-<!--                                    <div th:if="${#strings.isEmpty(boardDTO.id)}">-->
-<!--                                        <div class="reg-button">-->
-<!--                                            &lt;!&ndash;    th:formaction 경로 수정해야합니덥!!!     &ndash;&gt;-->
-<!--                                            <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/new'}"-->
-<!--                                                    type="submit" class="btn text-white" style="background-color: #c02323;">등록</button>-->
-<!--                                            <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
+                                    <div th:unless="${#strings.isEmpty(boardDTO.id)}">
 
-<!--                                    <div th:unless="${#strings.isEmpty(boardDTO.id)}">-->
-<!--                                        &lt;!&ndash;    th:formaction 경로 수정해야합니덥!!!     &ndash;&gt;-->
-<!--                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/modify/' + ${boardDTO.id}}" class="btn text-white" style="background-color: #c02323;" type="submit">수정</button>-->
-<!--                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/remove/' + ${boardDTO.id}}" class="btn text-white" style="background-color: #E1B848;" type="submit">삭제</button>-->
-<!--                                        <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>-->
-<!--                                    </div>-->
+                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/modify/' + ${boardDTO.id}}"
+                                                class="btn text-white" style="background-color: #c02323;" type="submit">
+                                            수정
+                                        </button>
+                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/remove/' + ${boardDTO.id}}"
+                                                class="btn text-white" style="background-color: #E1B848;" type="submit">
+                                            삭제
+                                        </button>
+                                        <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">
+                                            취소
+                                        </button>
+
+
+                                    </div>
 
                                 </div>
                             </div>
