--- a/wineshare/src/main/resources/templates/board/boardGetForm.html
+++ b/wineshare/src/main/resources/templates/board/boardGetForm.html
@@ -6,6 +6,9 @@
 <th:block layout:fragment="css">
     <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/board-form.css}">
 
+<!--    <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/board-form.css}">-->
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">-->
+
     <style>
         .fieldError{
             color: #bd2130;
@@ -14,6 +17,11 @@
 </th:block>
 
 <th:block layout:fragment="script">
+
+<!--    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>-->
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>-->
+<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
+
     <script th:inline="javascript">
         // const boardStatus = $('#hidden-boardStatus').val();
 
@@ -53,15 +61,16 @@
 
                             <div th:field="*{boardTitle}" th:text="*{boardTitle}"></div>
 
-                            <div th:field="*{createDate}" th:text="${#temporals.format(board.regTime , 'yy-MM-dd')}"></div>
-
-                            <div th:if="${boardDTO.boardImg != null}">
-                                <div>
-                                    <img th:src="*{boardImg}" th:alt="*{boardImgFile}">
-                                </div>
-                            </div>
+                            <div th:field="*{regTime}" th:text="${#temporals.format(board.regTime , 'yy-MM-dd')}"></div>
 
                             <div th:field="*{boardContent}" th:text="*{boardContent}"></div>
+
+
+                            <div th:if="${boardDTO.boardImgUrl != null}">
+                                <div>
+                                    <img th:src="${boardDTO.boardImgUrl}" alt="게시물 이미지">                                </div>
+                            </div>
+
 
                             <div th:field="*{writerNickname}" th:text="*{writerNickname}"></div>
                         </div>
@@ -69,14 +78,143 @@
                 </div>
             </div>
 
+            <div th:if="${#strings.equalsIgnoreCase(boardStatus, 'upgrade')}">
+                <button type="button">등업</button>
+            </div>
+
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
-
         </form>
+
+    <!-- 댓글 섹션 -->
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            댓글
+            <button id="addReplyBtn" class="btn btn-primary btn-xs pull-right">댓글 등록</button>
+        </div>
+        <div class="panel-body">
+            <ul class="chat" id="replyList" th:each="reply : ${replies}">
+                <li class="left clearfix" data-rno="${reply.id}">
+                    <div>
+                        <div class="header">
+                            <strong class="primary-font" th:text="${reply.writerNickname}"></strong>
+                            <small class="pull-right text-muted" th:text="${#temporals.format(reply.regTime, 'yyyy-MM-dd HH:mm')}"></small>
+                        </div>
+                        <p th:text="${reply.reply}"></p>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
+    <!-- /댓글 섹션 -->
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">댓글 관리</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="reply">댓글</label>
+                            <input class="form-control" name="reply" id="reply">
+                        </div>
+                        <div class="form-group">
+                            <label for="replyer">작성자</label>
+                            <input class="form-control" name="replyer" id="replyer" readonly>
+                        </div>
+<!--                        <div class="form-group">-->
+<!--                            <label for="replydate">작성일</label>-->
+<!--                            <input class="form-control" name="replydate" id="replydate" readonly>-->
+<!--                        </div>-->
+                    </div>
+                    <div class="modal-footer">
+                        <button id="modalModBtn" type="button" class="btn btn-warning">수정</button>
+                        <button id="modalRemoveBtn" type="button" class="btn btn-danger">삭제</button>
+                        <button id="modalRegisterBtn" type="button" class="btn btn-primary">등록</button>
+                        <button id="modalCloseBtn" type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.modal -->
+
+
 
 </div>
 
+</div>
 
+<script>
+    const replyList = $("#replyList")
+    let currentReplyId;
+
+    // 댓글 등록 모달창 이벤트
+    $("#addReplyBtn").on("click", function (e){
+        e.preventDefault();
+
+        $("#reply").val("");    // 입력필드 초기화
+        $("#writerNickname").val("currentUser"); // 현재 사용자 이름 설정
+        // $("#replydate").val(""); // 작성일 초기화
+        $("#modalRegisterBtn").show();
+        $("#modalModBtn").hide();
+        $("#modalRemoveBtn").hide();
+        $("#myModal").modal("show"); // 모달 표시
+    });
+
+    // 댓글 등록
+    $("#modalRegisterBtn").on("click", function () {
+        const replyData = {
+            reply: $("#reply").val(),
+            boardId: $("#bno").val()
+        };
+
+        $.ajax({
+            type : "POST",
+            url : "/replies/new",
+            contentType : "application/json",
+            data : JSON.stringify(replyData),
+            success : function (response){
+                alert(response);
+                showList();     // 댓글 목록 새로고침
+                $("#myModal").modal("hide");
+            },
+            error : function (){
+                alert("댓글 등록 실패")
+            }
+        });
+    });
+
+
+    // 댓글 목록 표시
+    function showList() {
+        $.ajax({
+            type: "GET",
+            url: "/replies/" + $("#bno").val() + "/1",
+            success: function (data) {
+                replyUL.empty();
+                data.content.forEach(function (reply) {
+                    replyUL.append(`
+                        <li class="left clearfix" data-rno="${reply.id}">
+                            <div>
+                                <div class="header">
+                                    <strong class="primary-font">${reply.writerNickname}</strong>
+                                    <small class="pull-right text-muted">${reply.regTime}</small>
+                                </div>
+                                <p>${reply.reply}</p>
+                            </div>
+                        </li>
+                    `);
+                });
+            },
+            error: function () {
+                alert("댓글 목록 로드 실패.");
+            }
+        });
+    }
+
+</script>
 
 </html>
