--- a/wineshare/src/main/resources/templates/board/boardGetForm.html
+++ b/wineshare/src/main/resources/templates/board/boardGetForm.html
@@ -5,6 +5,7 @@
 
 <th:block layout:fragment="css">
     <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/board-form.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/board-get-form.css}">
 
 <!--    <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/board-form.css}">-->
 <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">-->
@@ -31,60 +32,78 @@
 <div layout:fragment="content">
 
     <div class="board-form">
+        <div class="form-body">
         <form role="form" method="get" th:object="${boardDTO}" enctype="multipart/form-data">
             <input type="hidden" th:field="*{id}">
 
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div th:text="${boardStatus}" class="form-title">
+                    <div class="status-title">
+                        <div th:text="${boardStatus}" class="form-title" style="font-size: 2em">
                             상세보기
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div th:if="${isAuthor}">
-<!--                수정 버튼 -->
-                <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/modify/' + ${boardDTO.id}}"
-                        type="submit" class="hvr-shutter-out-horizontal">수정하기</button>
+            <div class="board-buttons">
+            <!-- 등업 버튼 -->
+            <div class="upgrade-btn" th:if="${#strings.equalsIgnoreCase(boardStatus, 'upgrade')}">
+                <button type="button" class="btn text-white" style="background-color: #8FAE48;">등업</button>
             </div>
 
+            <!-- 수정 버튼 -->
+            <div class="modify-btn" th:if="${isAuthor}">
+                <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/modify/' + ${boardDTO.id}}"
+                        type="submit" class="btn text-white" style="background-color: #E1B848;">수정하기</button>
+            </div>
+            </div>
 
 
             <div class="form-body">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="form-group">
 
+                        <table class="table table-bordered">
+                            <tbody>
+                            <!-- 게시물 제목 -->
+                            <tr>
+                                <th>제목</th>
+                                <td th:field="*{boardTitle}" th:text="*{boardTitle}"></td>
+                            </tr>
 
+                            <!-- 작성자 닉네임 -->
+                            <tr>
+                                <th>작성자</th>
+                                <td th:field="*{writerNickname}" th:text="*{writerNickname}"></td>
+                            </tr>
 
-                            <div th:field="*{boardTitle}" th:text="*{boardTitle}"></div>
+                            <!-- 등록 시간 -->
+                            <tr>
+                                <th>등록일</th>
+                                <td th:field="*{regTime}" th:text="${#temporals.format(board.regTime, 'yy-MM-dd')}"></td>
+                            </tr>
 
-                            <div th:field="*{regTime}" th:text="${#temporals.format(board.regTime , 'yy-MM-dd')}"></div>
+                            <!-- 게시물 내용 -->
+                            <tr>
+                                <th>내용</th>
+                                <td th:field="*{boardContent}" th:text="*{boardContent}"></td>
+                            </tr>
 
-                            <div th:field="*{boardContent}" th:text="*{boardContent}"></div>
+                            <!-- 게시물 이미지 -->
+                            <tr th:if="${boardDTO.boardImgUrl != null}">
+                                <th>이미지</th>
+                                <td>
+                                    <img th:src="${boardDTO.boardImgUrl}" alt="게시물 이미지">
+                                </td>
+                            </tr>
 
-
-                            <div th:if="${boardDTO.boardImgUrl != null}">
-                                <div>
-                                    <img th:src="${boardDTO.boardImgUrl}" alt="게시물 이미지">                                </div>
-                            </div>
-
-
-                            <div th:field="*{writerNickname}" th:text="*{writerNickname}"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div th:if="${#strings.equalsIgnoreCase(boardStatus, 'upgrade')}">
-                <button type="button">등업</button>
+                            </tbody>
+                        </table>
             </div>
 
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
         </form>
+        </div>
 
     <!-- 댓글 섹션 -->
     <div class="panel panel-default">
