상세페이지 끝

--- a/wineshare/src/main/resources/templates/cellar/cellarList.html
+++ b/wineshare/src/main/resources/templates/cellar/cellarList.html
@@ -33,7 +33,7 @@
         cache: false,
         success: function(result, status){
           alert("찜한 상품을 삭제했습니다.");
-          location.href = "/cellar";
+          location.href = "/cellars";
         },
         error: function(xhr, status, error){
           if(xhr.status == '401'){
