--- a/wineshare/src/main/resources/templates/home1.html
+++ b/wineshare/src/main/resources/templates/home1.html
@@ -198,7 +198,7 @@
                             <li class="product-item">
                                 <div class="product-thumb clearfix">
                                     <a href="#" class="product-thumb">
-                                        <img th:src="@{/image/homepage16.png}" alt="image">
+                                        <img th:src="@{/wineshare-img/surim.gif}" alt="image">
                                     </a>
                                 </div>
                                 <div class="product-info text-center clearfix">
@@ -224,7 +224,7 @@
                             <li class="product-item">
                                 <div class="product-thumb clearfix">
                                     <a href="#" class="product-thumb">
-                                        <img th:src="@{/image/homepage19.png}" alt="image">
+                                        <img th:src="@{/wineshare-img/surim.gif}" alt="image">
                                     </a>
                                     <span class="new">Sale</span>
                                 </div>
@@ -253,7 +253,7 @@
                             <li class="product-item">
                                 <div class="product-thumb clearfix">
                                     <a href="#" class="product-thumb">
-                                        <img th:src="@{/image/homepage18.png}" alt="image">
+                                        <img th:src="@{/wineshare-img/surim.gif}" alt="image">
                                     </a>
 
                                 </div>
@@ -280,7 +280,7 @@
                             <li class="product-item">
                                 <div class="product-thumb clearfix">
                                     <a href="#" class="product-thumb">
-                                        <img th:src="@{/image/homepage19.png}" alt="image">
+                                        <img th:src="@{/wineshare-img/surim.gif}" alt="image">
                                     </a>
                                 </div>
                                 <div class="product-info clearfix">
