--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -103,7 +103,7 @@
                 <li sec:authorize="isAuthenticated()">
                   <a href="/members/logout">Logout</a>
                 </li>
-                <li><a href="/cellar/cellarList" title="">My Cellar</a></li>
+                <li><a href="/cellars" title="">My Cellar</a></li>
                 <li><a href="/wines/new" title="">와인 등록</a></li>
                 <li><a href="/marketings/bistro/new" title="">업장/행사 등록</a></li>
                 <li><a href="#" title="">관리자 데이터 목록</a></li>
