--- a/wineshare/src/main/resources/templates/marketing/marketingForm.html
+++ b/wineshare/src/main/resources/templates/marketing/marketingForm.html
@@ -12,36 +12,49 @@
 <!--/* 사용자 js 추가 */-->
 <th:block layout:fragment="script">
     <script th:inline="javascript">
-        $(document).ready(function(){
-
-          const errorMessage = [[${errorMessage}]];
-          if (errorMessage != null) {
-            alert(errorMessage);
-          }
-
-          bindDomEvent();
-
-        });
-
-        // 이미지 파일만 등록 가능하도록 해주기
-        function bindDomEvent() {
-          $(".custom-file-input").on("change", function() {
-            const fileName = $(this).val().split("\\").pop();
-            // 체인지가 일어난곳(this)의 밸류(들어간 파일의 경로)
-            // 경로를 스플릿하면 경로의 마지막이 제일 위로 쌓이고, 팝하면 그걸 꺼내옴 = 파일명
-            let fileExt = fileName.substring(fileName.lastIndexOf(".")+1); // 확장자 추출
-            fileExt = fileExt.toLowerCase(); // 확장자를 소문자로 변환
-
-            if (fileExt != "jpg" && fileExt != "jpeg" && fileExt != "gif" && fileExt != "png" && fileExt != "bmp") {
-              alert("이미지 파일만 등록이 가능합니다.");
-              return;
+        $(document).ready(function() {
+            const errorMessage = [[${errorMessage}]];
+            if (errorMessage) {
+                alert(errorMessage);
             }
 
-            $(this).siblings(".custom-file-label").html(fileName);
-            // 파일 이름 띄워주기 (this=custom-file-input 의 형제 중 custom-file-label 에 fileName을 html로 넣어줌)
+            // 행사 상태에 따라 textarea 표시/숨기기
+            function toggleEventContent() {
+                // if ($("#eventOrNotSelect").val().toLowerCase() === "on") {
+                //     $("#eventContentGroup").show(); // 보여줌
+                // } else {
+                //     $("#eventContentGroup").hide(); // 숨김
+                // }
 
-          });
-        }
+                if($("#eventOrNotSelect").val().toLowerCase() === "end"){
+                    $("#eventContentGroup").hide();
+                }else{
+                    $("#eventContentGroup").show();
+                }
+
+            }
+
+            // 초기 상태 설정
+            toggleEventContent();
+
+            // 행사 상태 선택 시 이벤트 등록
+            $("#eventOrNotSelect").change(function() {
+                toggleEventContent();
+            });
+
+            // 이미지 파일만 등록 가능하도록 해주기
+            $(".custom-file-input").on("change", function() {
+                const fileName = $(this).val().split("\\").pop();
+                let fileExt = fileName.substring(fileName.lastIndexOf(".") + 1).toLowerCase(); // 확장자 추출
+
+                if (fileExt != "jpg" && fileExt != "jpeg" && fileExt != "gif" && fileExt != "png" && fileExt != "bmp") {
+                    alert("이미지 파일만 등록이 가능합니다.");
+                    return;
+                }
+
+                $(this).siblings(".custom-file-label").html(fileName); // 파일 이름 띄워주기
+            });
+        });
     </script>
 </th:block>
 
@@ -55,7 +68,6 @@
                 <div class="breadcrumbs">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Product</a></li>
                         <li class="blog"><a href="#">Marketing & Event</a></li>
                     </ul>
                 </div>
@@ -71,7 +83,7 @@
         <h1 class="marketing-form-title">Marketing & Event</h1>
 
         <!-- 타임리프를 사용한 와인 등록 폼 -->
-        <form th:action="@{/templates/marketing}" method="post" class="marketingForm" th:object="${marketingDTO}" enctype="multipart/form-data">
+        <form role="form" method="post" class="marketingForm" th:object="${marketingDTO}" enctype="multipart/form-data">
 
             <!-- 와인 이름 입력 -->
             <div class="form-group">
@@ -82,7 +94,7 @@
             <!-- 생산 국가 입력 -->
             <div class="form-group">
                 <label th:for="marketingContent">업장 소개</label>
-                <textarea class="form-control" id="marketingContent" th:field="*{marketingContent}" placeholder="업장 소개를 입력해주세요." required>
+                <textarea class="form-control" th:field="*{marketingContent}" placeholder="업장 소개를 입력해주세요." required>
                 </textarea>
 
             </div>
@@ -96,59 +108,52 @@
 
             <!-- 이미지 첨부 -->
             <div class="form-group">
-                <label th:for="marketImg">업장 사진 경로</label>
-                <div th:if="${#strings.isEmpty(marketingDTO.marketImg)}">
-                    <div class="form-img">
-                        <div class="custom-file img-div">
-                            <input type="file" class="custom-file-input" name="marketImgFile">
-                            <label class="custom-file-label" th:text="업장이미지"></label>
-                        </div>
-                    </div>
-                </div>
 
-                <div th:if="${not #strings.isEmpty(marketingDTO.marketImg)}">
+<!--                <label th:for="marketImgFile-upload">업장 사진 경로</label>-->
                     <div class="form-img">
                         <div class="custom-file img-div">
-                            <input type="file" class="custom-file-input" name="marketImgFile">
-                            <input type="hidden" name="id" th:value="${marketingDTO.id}">
-                            <label class="custom-file-label"
-                                   th:text="와인 이미지를 동록해주세요."></label>
+                            <label th:for="marketImgFile" class="custom-file-label" th:text="*{marketOriImgName}">사진 첨부</label>
+                            <input type="file" class="custom-file-input" id="marketImgFile" value="marketImgFile" name="marketImgFile">
                         </div>
                     </div>
-                </div>
+
             </div>
 
             <!-- 업장 분류 선택 -->
             <div class="form-group">
                 <label th:for="marketCategory">업장 분류</label>
-                <select th:field="*{marketCategory}" >
-                    <option value="WineBar">Wine Bar</option>
-                    <option value="BottleShop">Bottle Shop</option>
-                    <option value="Bistro">Bistro</option>
-                </select>
+                <input type="text" th:field="*{marketCategory}" readonly>
+<!--                <select th:field="*{marketCategory}" >-->
+<!--                    <option value="WineBar">Wine Bar</option>-->
+<!--                    <option value="BottleShop">Bottle Shop</option>-->
+<!--                    <option value="Bistro">Bistro</option>-->
+<!--                </select>-->
             </div>
+
+<!--            &lt;!&ndash; 업장 사장 이름 입력 &ndash;&gt;-->
+<!--            <div class="form-group">-->
+<!--                <label th:for="ownerNickname">사업자</label>-->
+<!--                <input th:field="*{ownerNickname}" type="text" placeholder="업장자 이름을 입력해주세요." required/>-->
+<!--            </div>-->
 
             <!-- 행사 상태 선택 -->
             <div class="form-group">
-                <label th:for="eventOrNot">행사 상태</label>
-                <select th:field="*{eventOrNot}" >
-                    <option value="0">End</option>
-                    <option value="1">On</option>
+                <label th:for="${eventOrNot}">행사 상태</label>
+                <select th:field="*{eventOrNot}" id="eventOrNotSelect">
+                    <option value="END" selected>End</option>
+                    <option value="PROMOTION">Promotion</option>
+                    <option value="EVENT">Event</option>
                 </select>
             </div>
 
-            <!-- 업장 사장 이름 입력 -->
-            <div class="form-group">
-                <label th:for="ownerNickname">업장자</label>
-                <input th:field="*{ownerNickname}" type="text" placeholder="업장자 이름을 입력해주세요." required/>
-            </div>
+
 
             <!--   !!!여기서부터 프로모션!!!  -->
 
             <!-- 행사상태가 1이면 활성화 (행사내용 입력) -->
-            <div class="form-group">
-                <label th:for="checkContent">행사 내용</label>
-                <textarea class="form-control" id="checkContent" th:field="*{checkContent}" placeholder="행사내용을 입력해주세요." required>
+            <div class="form-group" id="eventContentGroup">
+                <label th:for="eventContent">행사 내용</label>
+                <textarea class="form-control" th:field="*{eventContent}" placeholder="행사내용을 입력해주세요.">
                 </textarea>
             </div>
 
@@ -156,13 +161,29 @@
             <div th:if="${#strings.isEmpty(marketingDTO.id)}">
                 <div class="wine-reg-button">
                     <!--    th:formaction 경로 수정해야합니덥!!!     -->
-                    <button th:formaction="@{/board/new}"
+                    <button th:formaction="@{'/marketings/' + ${#strings.toLowerCase(marketCategory)} + '/new'}"
                             type="submit" class="btn text-white" style="background-color: #c02323;">등록</button>
                     <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>
                 </div>
             </div>
 
+            <div th:unless="${#strings.isEmpty(marketingDTO.id)}">
 
+                <button th:formaction="@{'/marketings/' + ${#strings.toLowerCase(marketCategory)} + '/modify/' + ${marketingDTO.id}}"
+                        class="btn text-white" style="background-color: #c02323;" type="submit">
+                    수정
+                </button>
+                <button th:formaction="@{'/marketings/' + ${#strings.toLowerCase(marketCategory)} + '/remove/' + ${marketingDTO.id}}"
+                        class="btn text-white" style="background-color: #E1B848;" type="submit">
+                    삭제
+                </button>
+                <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">
+                    취소
+                </button>
+
+            </div>
+
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
         </form>
 
